Redirect 404 error to home page

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,11 @@ services:
           event: lexik_jwt_authentication.on_jwt_created,
           method: updateJwtData,
         }
+
+  App\Events\Redirect404ToHomepageListener:
+    tags:
+      - { 
+          name: kernel.event_listener, 
+          event: kernel.exception, 
+          method: onKernelException 
+        }
